# gelinke

./: .dockerignore  .gitignore  100_TESTS_COMPLETE.md  BUILD_AND_TEST.md  Cargo.toml  DEBUG_SESSION_RESULTS.md  DOCKER_SETUP.md  DOCKER_TESTS_README.md  Dockerfile.renode  EXTENDED_PLATFORM_SUMMARY.md  FINAL_RENODE_ECOSYSTEM_STATUS.md  FINAL_SESSION_STATUS.md  FINAL_STATUS.md  FINAL_SUMMARY.md  FINAL_VICTORY.md  FOC_VISUALIZATION_README.md  IRPC_INTEGRATION_SUMMARY.md  IRPC_MIGRATION_READY.md  NEXT_SESSION_PROMPT.md  NEXT_STEPS.md  ORGANIZATION.md  PHASE_1_COMPLETE.md  PHASE_3_COMPLETE.md  PROMPT_FOR_TESTING.md  PROMPT_FOR_VALIDATION_AGENT.md  QUICK_START.txt  QUICK_START_FULL_TESTS.md  RENODE_INVESTIGATION.md  RENODE_READY_PERIPHERALS_SUMMARY.md  RENODE_SETUP_SUMMARY.md  SESSION_FINAL_STATUS.md  SESSION_SUMMARY.md  SESSION_SUMMARY_PHASES_1_2.md  STATUS.md  SUCCESS_UART_WORKING.md  TESTING_COMPLETE.md  TESTING_INFRASTRUCTURE_COMPLETE.md  TESTS_WORKING_SUMMARY.md  TEST_RUNNER_README.md  TRANSPORT_ABSTRACTION.md  (+20 more)
.cargo/: config.toml
.claude/: import_fixes.md  project_rules.md
docs/: BEST_PRACTICES_RECOMMENDATIONS.md  BUILD_STATUS.md  CI_SETUP.md  CLN17_V2_HARDWARE_PINOUT.md  COMPLETE_HARDWARE_ADAPTATION.md  EMULATION_OPTIONS.md  EMULATION_QUICKSTART.md  ENABLING_FULL_TESTS.md  FIRMWARE_GAP_ANALYSIS.md  FIRMWARE_HARDWARE_MISMATCH_CRITICAL.md  FIRMWARE_README.md  HARDWARE_FIX_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  IRPC_EVOLUTION_RESEARCH.md  IRPC_REQUIREMENTS.md  IRPC_V2_ADAPTIVE.md  IRPC_V2_CALIBRATION.md  IRPC_V2_PROTOCOL.md  IRPC_V2_QUICK_SUMMARY.md  LOCAL_TESTING.md  MOCK_PERIPHERALS_GUIDE.md  POWER_ANALYSIS_README.md  POWER_ARCHITECTURE_COMPARISON.md  POWER_IMPROVEMENTS_QUICK_REFERENCE.md  POWER_MANAGEMENT_ANALYSIS.md  POWER_MANAGEMENT_IMPLEMENTATION_STATUS.md  POWER_TELEMETRY_INTEGRATION.md  README.md  README_RENODE.md  STEP_DIR_CONTROL.md  TESTING_SUITE.md  TEST_SUITE_IMPLEMENTATION.md  TEST_VISUALIZATION.md
mpc/: COMPLETION_PLAN.md  PHASE_2_PLAN.md  README.md  USAGE.md  generate_embedded_solver.py  motor_model.json  mpc_controller.py  system_identification.py
renode/: CHEATSHEET.md  PERIPHERALS_README.md  README.md  manual_test.sh  stm32g431_foc.resc  stm32g431cb.repl  stm32g431cb_with_mocks.repl
scripts/: verify_hardware_pins.sh
snapshots/: basic_startup.Should_Boot_And_Show_Banner.fail0.save  basic_startup.Should_Initialize_CAN.fail0.save  basic_startup.Should_Initialize_PWM.fail0.save  basic_startup.Should_Initialize_System.fail0.save  basic_startup.Should_Start_Heartbeat.fail0.save  can_communication.Should_Create_CAN_Hub.fail0.save  can_communication.Should_Handle_CAN_Frame_Reception.fail0.save  can_communication.Should_Initialize_FDCAN_Peripheral.fail0.save  foc_control.Should_Initialize_PWM_Timer.fail0.save  foc_control.Should_Read_ADC_Current_Sensors.fail0.save  foc_control.Should_Read_Encoder_Position.fail0.save  (+2 more)
(+136 files in other folders)
