[package]
name = "joint_firmware"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = { version = "0.7.5", features = ["device"] }
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-stm32 = { version = "0.4.0", features = ["stm32g431cb", "memory-x", "time"] }
embassy-time = "0.5.0"
fixed = "1.29"
foc = { version = "0.3.0", default-features = false }
libm = "0.2"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
